--- a/main.html
+++ b/main.html
@@ -43,6 +43,7 @@
 
         <a href="#">forget the password</a>
         <br>
+        <p>Staging </p>
 
 
         <input type="submit" id="submit" name="login" value="login">
